; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_scan.c_do_scan_async.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_scsi_scan.c_do_scan_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.async_scan_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @do_scan_async to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_scan_async(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.async_scan_data*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.async_scan_data*
  store %struct.async_scan_data* %7, %struct.async_scan_data** %5, align 8
  %8 = load %struct.async_scan_data*, %struct.async_scan_data** %5, align 8
  %9 = getelementptr inbounds %struct.async_scan_data, %struct.async_scan_data* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @do_scsi_scan_host(i32 %10)
  %12 = load %struct.async_scan_data*, %struct.async_scan_data** %5, align 8
  %13 = call i32 @scsi_finish_async_scan(%struct.async_scan_data* %12)
  ret void
}

declare dso_local i32 @do_scsi_scan_host(i32) #1

declare dso_local i32 @scsi_finish_async_scan(%struct.async_scan_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
